# weedeater-crawler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
seeds/: weedeater_targets.yaml
src/weedeater_crawler/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
src/weedeater_crawler/spiders/: weedeater_spider.py
src/weedeater_crawler/utils/: nav.py  proxy.py  storage.py  ua.py
tools/: seed_queue.py
